--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@mui/x-data-grid": "^6.0.1",
+    "axios": "^1.3.4",
+    "chatgpt": "^5.0.10",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "lottie-react": "^2.4.0",
