--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-react": "^2.4.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.4.3"
   }
 }
